--- a/Tarea 1 Ayudantia - Pagina Html-Css-Php/Tarea 1 # Ayudantia Oficial/styles.css
+++ b/Tarea 1 Ayudantia - Pagina Html-Css-Php/Tarea 1 # Ayudantia Oficial/styles.css
@@ -1,5 +1,3 @@
-
-
 #nose
 {
 	border: solid black 5px;
@@ -11,7 +9,7 @@
 	height: 170px;
 	width: 200px;
 	transition-property: background;
-    transition-duration: 0.5s;
+        transition-duration: 0.5s;
 	font-family: verdana;
 	font-size: 40px;
 }
@@ -27,44 +25,62 @@
 	background-color: black;
 }
 
-#tabla1
+#tabla0
 {
 	position: relative;
 	top:15px;
-	font-family: verdana;
-	color:white;
+	font-family: Arial;
+	font-size: 18px;
+	color:#0BE239;
+	background: #000000;
 	transition-property: background;
-    transition-duration: 0.9s;
+        transition-duration: 0.9s;
+}
+
+#tabla1
+{
+	position: relative;
+	top:35px;
+	font-family: verdana;
+	font-size: 18px;
+	color: white;
+	transition-property: background;
+        transition-duration: 0.9s;
 }
 
 #tabla1:hover {
-    background: #000000;
+    background: #982C2C;
+    color: white;
 }
 
 #tabla2
 {
 	position: relative;
-	top:25px;
+	top:50px;	
 	font-family: verdana;
+	font-size: 18px;
 	color:white;
 	transition-property: background;
-    transition-duration: 0.9s;
+        transition-duration: 0.9s;
 }
 
 #tabla2:hover {
-    background: #000000;
+    background: #982C2C;
+    color: white;
 }
 
 #tabla3
 {
 	position: relative;
-	top:35px;
+	top:65px;
 	font-family: verdana;
+	font-size: 18px;
 	color:white;
 	transition-property: background;
-    transition-duration: 0.9s;
+        transition-duration: 0.9s;
 }
 
 #tabla3:hover {
-    background: #000000;
+    background: #982C2C;
+    color: white;
 }
